# stackvec-rs

./: Cargo.toml  LICENSE  README.md
benches/: vec_vs_stackvec.rs
examples/: basic.rs  incomplete_array_panic.rs  into_iter.rs  try_collect.rs  try_collect_panic.rs
src/: array.rs  error.rs  lib.rs  tests.rs  traits.rs
src/stackvec/: mod.rs
src/stackvec/traits/: array_into_iter.rs  from_iter.rs  into_iter.rs  mod.rs  try_from_iter.rs  try_into.rs
tests/: basic.rs
